@@ -1,5 +1,6 @@
 1.10.2:
 * Client: New config value "Memory.CompressBlockDB" (default true)
+* Tools: utxo_compress and utxo_decompress have been fixed
 
 1.10.1 - 2022-06-15
 * btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
